--- a/Amazon Sale Report Analysis/Amazon Sales Report Analysis.ipynb
+++ b/Amazon Sale Report Analysis/Amazon Sales Report Analysis.ipynb
@@ -18,7 +18,7 @@
       "cell_type": "markdown",
       "source": [
         "# **Amazon Sale Report Analysis**\n",
-        "Membuat sebuah analisis dari dataset yaitu 'Amazon Sale Report' untuk menambahkan insight mengenai:\n",
+        "Membuat sebuah analisis dari dataset yaitu 'Amazon Sale Report' yang didapat dari https://www.kaggle.com/datasets/thedevastator/unlock-profits-with-e-commerce-sales-data untuk menambahkan insight mengenai:\n",
         "1. Bagaimana tren penjualan produk berdasarkan kategori dari waktu ke waktu?\n",
         "2. Produk dan Kategori mana yang paling laris berdasarkan jumlah dan total pendapatan?\n",
         "3. Di negara bagian mana yang mengalami penjualan paling tinggi?\n",
